# skout

./: .gitignore  README.md  main.py  pyproject.toml
data/: org.kde.skout.desktop  org.kde.skout.metainfo.xml
docs/: architecture.md  rules.md
skout/core/: card.py  deck.py  hand.py  trick.py
skout/engine/: bot_logic.py  engine.py  rules.py
skout/ui/: arena_manager.py  arena_widgets.py  card_widget.py  config.py  lobby_widget.py  main_window.py  settings_dialog.py
tests/: test_ui_playtest.py
